added signed html and bunch others

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,9 @@
             <a class="card" onclick="FIRST()">
                 <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
                 <article>
-                    <h1>Title</h1>
-                    <p>summary</p>
-                    <span>money</span>
+                    <h1 id="card-title1">Title</h1>
+                    <p id="card-summary1">summary</p>
+                    <span id="card-money1">money</span>
                 </article>
             </a>
         </div>
@@ -40,9 +40,9 @@
             <a class="card" onclick="SECOND()">
                 <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
                 <article>
-                    <h1>Title</h1>
-                    <p>summary</p>
-                    <span>money</span>
+                    <h1 id="card-title2">Title</h1>
+                    <p id="card-summary2">summary</p>
+                    <span id="card-money2">money</span>
                 </article>
             </a>
         </div>
@@ -51,9 +51,9 @@
             <a class="card" onclick="THIRD()">
                 <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
                 <article>
-                    <h1>Title</h1>
-                    <p>summary</p>
-                    <span>money</span>
+                    <h1 id="card-title3">Title</h1>
+                    <p id="card-summary3">summary</p>
+                    <span id="card-money3">money</span>
                 </article>
             </a>
         </div>
@@ -62,9 +62,9 @@
             <a class="card" onclick="FOURTH()">
                 <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
                 <article>
-                    <h1>Title</h1>
-                    <p>summary</p>
-                    <span>money</span>
+                    <h1 id="card-title4">Title</h1>
+                    <p id="card-summary4">summary</p>
+                    <span id="card-money4">money</span>
                 </article>
             </a>
         </div>
@@ -73,9 +73,9 @@
             <a class="card" onclick="FIFTH()">
                 <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
                 <article>
-                    <h1>Title</h1>
-                    <p>summary</p>
-                    <span>money</span>
+                    <h1 id="card-title5">Title</h1>
+                    <p id="card-summary5">summary</p>
+                    <span id="card-money5">money</span>
                 </article>
             </a>
         </div>
@@ -84,9 +84,9 @@
             <a class="card" onclick="SIXTH()">
                 <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
                 <article>
-                    <h1>Title</h1>
-                    <p>summary</p>
-                    <span>money</span>
+                    <h1 id="card-title6">Title</h1>
+                    <p id="card-summary6">summary</p>
+                    <span id="card-money6">money</span>
                 </article>
             </a>
         </div>
@@ -95,9 +95,9 @@
             <a  class="card" onclick="SEVENTH()">
                 <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
                 <article>
-                    <h1>Title</h1>
-                    <p>summary</p>
-                    <span>money</span>
+                    <h1 id="card-title7">Title</h1>
+                    <p id="card-summary7">summary</p>
+                    <span id="card-money7">money</span>
                 </article>
             </a>
         </div>
@@ -106,11 +106,12 @@
             <a class="card"  onclick="EIGHTH()">
                 <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
                 <article>
-                    <h1>Title</h1>
-                    <p>summary</p>
-                    <span>money</span>
+                    <h1 id="card-title8">Title</h1>
+                    <p id="card-summary8">summary</p>
+                    <span id="card-money8">money</span>
                 </article>
             </a>
+        </div>
     </div>
 
     <script type="text/javascript" src=" {{ url_for('static', filename='js/index.js') }}"></script>
