--- a/templates/page.html
+++ b/templates/page.html
@@ -15,10 +15,7 @@
     <p id="background"></p>
 
     <span id="top_menu">
-
-        <button onclick="sign_in()" type="submit" id="sign_in">
-            <span id="btn_text">로그인</span>
-        </button>
+        <span id="user">{{user}}</span>
         <a id="main_title" onclick="maintitle()">
             GHS Funding
         </a>
