--- a/static/css/page.css
+++ b/static/css/page.css
@@ -45,43 +45,14 @@ body {
     background-color: #75c3ce;
 }
 
-
 /*Sign In button style*/
-#sign_in {
-    appearance: button;
-    backface-visibility: hidden;
-    background-color: #405cf5;
-    border-radius: 6px;
-    border-width: 0;
-    box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
-    box-sizing: border-box;
-    color: #fff;
-    cursor: pointer;
-    font-family: -apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Ubuntu,sans-serif;
-    font-size: 100%;
-    height: 44px;
-    width: 100px;
-    line-height: 1.15;
-    outline: none;
-    overflow: hidden;
-    position: absolute;
+#user {
+    font-size: 200%;
+    
+    position: inherit;
+    left: 99%;
     top: 50%;
-    right: 0px;
-    transform: translate(-25%, -50%);
-    text-align: center;
-    text-transform: none;
-    transition: all .2s,box-shadow .08s ease-in;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-}
-
-#sign_in:disabled {
-  cursor: default;
-}
-
-#sign_in:focus {
-  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
+    transform: translate(-100%, -50%);
 }
 
 
