added signed html and bunch others

--- a/static/css/page.css
+++ b/static/css/page.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #96e1eb;
+    background-color: #d6d6d6;
 }
 
 
@@ -42,7 +42,7 @@ body {
     left: 0;
     top: 0;
 
-    background-color: #75c3ce;
+    background-color: #ebebeb;
 }
 
 /*Sign In button style*/
