--- a/templates/page.html
+++ b/templates/page.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="menu-1">
             <a class="card">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(../img/temp.png);"></div>
                 <article>
                     <h1>{{Title}}</h1>
                     <pre>
