--- a/static/css/page.css
+++ b/static/css/page.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family : 'NanumSquare', sans-serif;
 }
 
 body {
@@ -56,7 +57,7 @@ body {
 }
 
 
-/* main content */
+/* Content box style*/
 a {
     text-decoration: none;
     color: #555;
@@ -104,20 +105,22 @@ a {
 .card p {
     flex: 1;
     line-height: 1.4;
+
+    margin-top: 10px;
 }
 
 h1 {
-    font-size: 4rem;
-    margin: 20px 0 30px 0;
+    font-size: 3.0rem;
     color: #444;
 }
 
 .card span {
     font-size: 1.6rem;
     font-weight: bold;
-    text-align: right;
     color: #AAA;
-    margin: 0 0 0 0;
+    margin: 4rem 0 0 0;
+
+    text-align: right;
 }
 
 
