--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="menu-1">
             <a class="card" onclick="FIRST()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/firstGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title1">Title</h1>
                     <p id="card-summary1">summary</p>
@@ -38,7 +38,7 @@
         
         <div class="menu-2" >
             <a class="card" onclick="SECOND()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/secondGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title2">Title</h1>
                     <p id="card-summary2">summary</p>
@@ -49,7 +49,7 @@
 
         <div class="menu-3">
             <a class="card" onclick="THIRD()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/thirdGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title3">Title</h1>
                     <p id="card-summary3">summary</p>
@@ -60,7 +60,7 @@
 
         <div class="menu-4">
             <a class="card" onclick="FOURTH()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/fourthGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title4">Title</h1>
                     <p id="card-summary4">summary</p>
@@ -71,7 +71,7 @@
 
         <div class="menu-5">
             <a class="card" onclick="FIFTH()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/fifthGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title5">Title</h1>
                     <p id="card-summary5">summary</p>
@@ -82,7 +82,7 @@
 
         <div class="menu-6" >
             <a class="card" onclick="SIXTH()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/sixthGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title6">Title</h1>
                     <p id="card-summary6">summary</p>
@@ -93,7 +93,7 @@
 
         <div class="menu-7">
             <a  class="card" onclick="SEVENTH()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/seventhGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title7">Title</h1>
                     <p id="card-summary7">summary</p>
@@ -104,7 +104,7 @@
 
         <div class="menu-8">
             <a class="card"  onclick="EIGHTH()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/eighthGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title8">Title</h1>
                     <p id="card-summary8">summary</p>
