--- a/templates/page.html
+++ b/templates/page.html
@@ -24,19 +24,19 @@
     <div class="container">
         <div class="menu-1">
             <a class="card">
-                <div class="image" style="background-image: url(../img/temp.png);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/{{img}}.png?raw=true);"></div>
                 <article>
                     <h1>{{Title}}</h1>
-                    <pre>
+                    <p>
     {{Long_explain}}
-                    </pre>
+                    </p>
                     
                     <div class="input-group mb-3">
                         <input type="number" class="form-control" placeholder="money" aria-label="money" aria-describedby="button-addon2" id = "input">
                         <button class="btn btn-outline-secondary" type="button" id="button-addon2" onclick="Fund()">Fund</button>
                     </div>
                     
-                    <span id = Account>Account: {{money}}\</span>
+                    <span id = Account>Account: {{money}}&#8361;</span>
                 </article>
             </a>
         </div>
