--- a/templates/signed_index.html
+++ b/templates/signed_index.html
@@ -15,7 +15,7 @@
 
     <span id="top_menu">
         <span id="user">{{user}}</span>
-        <a id="main_title" href="index.html">
+        <a id="main_title" href="index">
             GHS Funding
         </a>
     </span>
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="menu-1">
             <a class="card" onclick="FIRST()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/firstGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title1">Title</h1>
                     <p id="card-summary1">summary</p>
@@ -31,10 +31,10 @@
                 </article>
             </a>
         </div>
-        
+
         <div class="menu-2" >
             <a class="card" onclick="SECOND()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/secondGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title2">Title</h1>
                     <p id="card-summary2">summary</p>
@@ -45,7 +45,7 @@
 
         <div class="menu-3">
             <a class="card" onclick="THIRD()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/thirdGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title3">Title</h1>
                     <p id="card-summary3">summary</p>
@@ -56,7 +56,7 @@
 
         <div class="menu-4">
             <a class="card" onclick="FOURTH()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/fourthGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title4">Title</h1>
                     <p id="card-summary4">summary</p>
@@ -67,7 +67,7 @@
 
         <div class="menu-5">
             <a class="card" onclick="FIFTH()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/fifthGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title5">Title</h1>
                     <p id="card-summary5">summary</p>
@@ -78,7 +78,7 @@
 
         <div class="menu-6" >
             <a class="card" onclick="SIXTH()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/sixthGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title6">Title</h1>
                     <p id="card-summary6">summary</p>
@@ -89,7 +89,7 @@
 
         <div class="menu-7">
             <a  class="card" onclick="SEVENTH()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/seventhGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title7">Title</h1>
                     <p id="card-summary7">summary</p>
@@ -100,7 +100,7 @@
 
         <div class="menu-8">
             <a class="card"  onclick="EIGHTH()">
-                <div class="image" style="background-image: url(https://www.purina.co.uk/sites/default/files/styles/ttt_image_original/public/2023-03/Hero%20Pedigree%20Cats.webp?itok=zKKx3jSn);"></div>
+                <div class="image" style="background-image: url(https://github.com/fruit8067/simpleflaskprojectforschool/blob/main/img/eighthGroup.png?raw=true);"></div>
                 <article>
                     <h1 id="card-title8">Title</h1>
                     <p id="card-summary8">summary</p>
@@ -111,7 +111,7 @@
     </div>
 
     <div id="account">
-        <span id = "money">money</span>
+
     </div>
 
     <script type="text/javascript" src=" {{ url_for('static', filename='js/signed_script.js') }}"></script>
