added signed html and bunch others

--- a/static/css/page.css
+++ b/static/css/page.css
@@ -46,9 +46,11 @@ body {
     background-color: #ebebeb;
 }
 
-/*Sign In button style*/
+/* User style*/
 #user {
-    font-size: 200%;
+    font-size: 150%;
+    text-decoration: none;
+    color: #555;
     
     position: inherit;
     left: 99%;
