--- a/templates/page.html
+++ b/templates/page.html
@@ -16,7 +16,7 @@
 
     <span id="top_menu">
         <span id="user">{{user}}</span>
-        <a id="main_title" onclick="maintitle()">
+        <a class="null" id="main_title" onclick="maintitle()">
             GHS Funding
         </a>
     </span>
